--- a/resources/private/common-html/sass/partials/_header.scss
+++ b/resources/private/common-html/sass/partials/_header.scss
@@ -259,9 +259,9 @@ $notification-bottom: -60px;
   h2 {margin-top: $marginL}
 }
 
-/* Louhi theme */
+/* Louhi and Facta themes */
 
-.louhi {
+.louhi, .facta {
   nav {
     a.logo {
       background: url("/lp-static/img/logo-v2-flat.png");
