LPK-1738 Calendar view styling

--- a/resources/private/common-html/sass/views/_calendars.scss
+++ b/resources/private/common-html/sass/views/_calendars.scss
@@ -82,8 +82,8 @@
 
       div.reservation-slot {
         position: absolute;
-        background-color: $orange-light;
         width: 100%;
+        padding: $marginS;
       }
     }
 
