Calendar view styling now complete, refactored API code

--- a/resources/private/common-html/sass/views/_calendars.scss
+++ b/resources/private/common-html/sass/views/_calendars.scss
@@ -84,6 +84,24 @@
         position: absolute;
         width: 100%;
         padding: $marginS;
+
+        &.booked {
+          color: white;
+          background: $green-dark;
+
+          a {
+            color: white;
+          }
+        }
+
+        &.accepted {
+          color: white;
+          background: $orange-dark;
+
+          a {
+            color: white;
+          }
+        }
       }
     }
 
