increase the size of the document identifier field

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -432,6 +432,10 @@ input.form-input.inline {
  width: $cols1;
 }
 
+.form-input.short-plus {
+ width: 1.5  * $cols1;
+}
+
 .form-input.medium {
  width: $cols2;
 }
