Company user editing upgrade.
New field: submit denotes whether the user can submit application on the
company's behalf. The actual mechanism is not implemented yet.

Code and localization refactoring.

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1462,7 +1462,7 @@ select.dropdown {
   border-radius: 0 0 0 0;
   padding: {
     left: 12px;
-    right: 12px;
+    right: 17px + 12px + 4px; // arrow position + arrow width + padding
 
   }
   height: 40px;
