Invite user dialog update.
Submit checkbox.

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1599,6 +1599,10 @@ div.review-done {
   margin-bottom: $marginL;
 }
 
+.checkbox-wrapper.checkbox-wrapper--break-small {
+  margin-bottom: $marginS;
+}
+
 .foreman-info {
   padding-left: $marginS;
 }
