--- a/resources/public/lp-static/css/main-blessed1.css
+++ b/resources/public/lp-static/css/main-blessed1.css
@@ -9268,7 +9268,12 @@ ul.tabs {
   min-height: 96px;
   position: relative;
   margin: 12px 0;
-  padding-bottom: 64px;
+  padding-bottom: 24px;
+  /* [type=submit], .btn, button { */
+  /*   //padding: 4px $marginL; */
+  /*   min-width: $cols2; */
+  /*   max-width: $cols3; */
+  /* } */
 }
 /* line 154, ../../../private/common-html/sass/partials/_modal.scss */
 .dialog-content .dialog-desc {
@@ -9277,11 +9282,6 @@ ul.tabs {
 /* line 158, ../../../private/common-html/sass/partials/_modal.scss */
 .dialog-content .dialog-desc-wide {
   width: 450px;
-}
-/* line 162, ../../../private/common-html/sass/partials/_modal.scss */
-.dialog-content [type=submit], .dialog-content .btn, .dialog-content .dataTables_paginate .paginate_disabled_previous, .dataTables_paginate .dialog-content .paginate_disabled_previous, .dialog-content .dataTables_paginate .paginate_disabled_next, .dataTables_paginate .dialog-content .paginate_disabled_next, .dialog-content button {
-  min-width: 10em;
-  max-width: 16.25em;
 }
 /* line 169, ../../../private/common-html/sass/partials/_modal.scss */
 .dialog-content .file-upload {
@@ -9323,18 +9323,23 @@ ul.tabs {
 }
 
 /* line 208, ../../../private/common-html/sass/partials/_modal.scss */
+.dialog-content__footer {
+  margin-top: 24px;
+}
+
+/* line 212, ../../../private/common-html/sass/partials/_modal.scss */
 .scrolling-content {
   overflow-y: scroll;
   max-height: 288px;
 }
 
-/* line 213, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 217, ../../../private/common-html/sass/partials/_modal.scss */
 .dialog-content-low {
   min-height: 72px;
   padding-bottom: 0;
 }
 
-/* line 219, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 223, ../../../private/common-html/sass/partials/_modal.scss */
 .with-map {
   /* .map-container { */
   /*   //padding: 0; */
@@ -9363,37 +9368,37 @@ ul.tabs {
 /*   vertical-align: top; */
 /*   padding-left: $marginM; */
 /* } */
-/* line 253, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 257, ../../../private/common-html/sass/partials/_modal.scss */
 .neighbors-message {
   margin: 12px;
 }
 
-/* line 258, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 262, ../../../private/common-html/sass/partials/_modal.scss */
 #dialog-add-link-permit .combobox {
   margin-bottom: 8px;
 }
 
-/* line 264, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 268, ../../../private/common-html/sass/partials/_modal.scss */
 #upload-dialog .dialog-content {
   padding-bottom: 0;
 }
 
-/* line 270, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 274, ../../../private/common-html/sass/partials/_modal.scss */
 #dialog-cancel-application div.application-cancel-text-content p {
   margin-bottom: 0;
 }
 
-/* line 276, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 280, ../../../private/common-html/sass/partials/_modal.scss */
 .authority-select-dialog select {
   width: 100%;
 }
 
-/* line 282, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 286, ../../../private/common-html/sass/partials/_modal.scss */
 .company-invite-dialog select {
   width: 100%;
 }
 
-/* line 288, ../../../private/common-html/sass/partials/_modal.scss */
+/* line 292, ../../../private/common-html/sass/partials/_modal.scss */
 .with-map-top {
   margin-top: 6px;
   margin-bottom: 0;
@@ -11411,4 +11416,51 @@ div.search i {
 #applications-list div, .applications-table div {
   padding-top: 3px;
   height: 30px;
+}
+
+/* line 234, ../../../private/common-html/sass/views/_applications.scss */
+.clearable {
+  position: relative;
+  display: inline-block;
+  vertical-align: bottom;
+}
+
+/* line 239, ../../../private/common-html/sass/views/_applications.scss */
+.applications-search {
+  padding-right: 17px;
+  /* add space for the 'x' icon*/
+}
+
+/* line 242, ../../../private/common-html/sass/views/_applications.scss */
+.applications-search::-ms-clear {
+  display: none;
+}
+
+/* line 245, ../../../private/common-html/sass/views/_applications.scss */
+span.icon_clear {
+  position: absolute;
+  right: 12px;
+  top: 8px;
+  display: none;
+  /* now go with the styling */
+  cursor: pointer;
+  font: bold 1em sans-serif;
+  color: #38468F;
+}
+/* line 255, ../../../private/common-html/sass/views/_applications.scss */
+span.icon_clear:before {
+  color: #f52;
+}
+
+/* application section styles*/
+/*Summary styles*/
+/* line 65, ../../../private/common-html/sass/views/_application.scss */
+.application_summary {
+  background-color: #eeeeee;
+  border-bottom: 2px solid #bbbbbb;
+  min-height: 332px;
+  padding: 6px 0 0 0;
+  position: relative;
+  display: block;
+  float: none;
 }
